✅ Refactored login, refresh, and logout routes in auth-service to use HTTP-only cookies

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,11 +1,12 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 .input {
   @apply w-full border border-gray-300 rounded px-3 py-2 mt-1 focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
 
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -72,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
